// 程序内使用的结构，方便缓存到 Redis 等工具内（毕竟比 JSON 省内存）
syntax = "proto3";
package text_life;

option go_package = "structs/pb";

message Vec2D {
  uint64 x = 1;
  uint64 y = 2;
}

message NowDungeon {
  repeated Room rooms = 1;
  uint64 player_id = 2;
  uint64 now_room_id = 3;
  uint64 now_monster_id = 4;
}

message Room {
  uint64 id = 1; // 房间、走廊等实体连续 ID
  Vec2D pos = 2;
  string title = 3;
  repeated Box box = 4;
  repeated uint64 link_rooms = 5; // 相连的走廊
  repeated Monster monsters = 6;
}

message Monster {
  uint64 id = 1;
  repeated GoodsHas goodsHasList = 2;
  uint64 hp_base = 3;
  uint64 attack_base = 4;
  uint64 defence_base = 5;
}

// 容器
message Box {
  bool searched = 1;
  repeated GoodsHas goodsHasList = 2;
}

message GoodsHas {
  uint64 index = 1;
  uint32 count = 2;
}
